Cherry-pick 287414@main (23bfb2f9346e). https://bugs.webkit.org/show_bug.cgi?id=283914

REGRESSION(285820@main): [TextureMapper][GTK][WPE] ASSERTION FAILED: textureIndex < m_textures.size() on luna.amazon.com
    https://bugs.webkit.org/show_bug.cgi?id=283914

    Reviewed by Fujii Hironori.

    The needsUpdate state for flattened layers was incorrectly reset before the
    layer was fully updated. This issue occurred when processing large layers
    that required tiling, as the state was based on the number of tile textures
    being greater than zero. This fix adjusts the logic to correctly account for
    layers that require multiple tiles to render.

    * Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:

    Canonical link: https://commits.webkit.org/287414@main

Canonical link: https://commits.webkit.org/282416.365@webkitglib/2.46